fixed overflow problem

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   width: 100vw;
   height: 100vh;
   position: relative;
+  /* overflow-x:hidden; */
 }
 
 #navbar{
@@ -58,15 +59,42 @@
   font-size: 2vh;
 }
 #navbar #navItem2{
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   width: 40vw;
 }
+
 #navbar #navItem2 a{
-  color: white;
-  text-decoration: none;
   font-size: 1.3vh;
+  color: rgb(255, 255, 255, 0.9);
+  text-decoration: none;
+}
+#navbar #navItem2 .navlinks-tab{
+  border:1px solid red;
+  position:absolute;
+  width:100%;
+  height: 800%;
+  top:250%;
+  justify-content: space-evenly;
+  display:flex;
+  align-items:center;
+}
+#navlink-tab{
+  position:relative;
+  width:15%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10.3px);
+  -webkit-backdrop-filter: blur(10.3px);
+  display:grid;
+}
+#navlink-tab a{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .catalog{
@@ -74,6 +102,7 @@
   /* top:0; */
   width: 100%;
   height:100%;
+  overflow:hidden;
 }
 .catalog video{
   width: 100%;
@@ -196,6 +225,7 @@
   position: relative;
   width: 100%;
   height:100%;
+  overflow:hidden;
 }
 .catalogy #shops{
   position:relative;
@@ -323,6 +353,7 @@
   width: 100%;
   height:200%;
   /* background-color: red; */
+  overflow: hidden;
 }
 .cataloga #events{
   position:relative;
