--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  z-index: 100;
 }
 body::-webkit-scrollbar {
   width: 10px;               
